--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -34,3 +34,9 @@ height: 100px;
 {
 	float: left;
 }
+.cart-list-devider
+{
+	border-bottom: 1px solid #ccc;
+	margin-bottom: 20px;
+	padding-bottom: 20px;
+}
